[package]
name = "task_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.28"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
sea-orm = { version = "0.12.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "mock",
    "with-json",
    "with-chrono",
] }
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.17"
